--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "memory",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://xuwanwan.github.io/memory-word/build",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
@@ -11,6 +12,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "gh-pages": "^1.2.0"
   }
 }
