--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "memory",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://xuwanwantt.github.io/memory-word/build/",
+  "homepage": "http://xuwanwantt.github.io/memory-word/build",
   "dependencies": {
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
